fixed alignment of recipe steps details and chevrons

--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -42,6 +42,12 @@ span.link:hover {
     margin-top: 0.2em;
     background: white;
 }
+.index-recipe-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 150px; /* Adjust this value based on your desired length */
+}
 .image-container {
     width: auto;
     height: 200px;
